@@ -186,6 +186,12 @@ module.exports = class AOAdapter extends EventEmitter {
     })
   }
 
+  sendWithAnyConnection (packet) {
+    this.m.withAuthSocket((ws) => {
+      send(ws, packet)
+    })
+  }
+
   notify (ws, level, message) {
     send(ws, [0, 'n', null, {
       type: 'ucm-notify-ui',
